Delete Book and Update Book cases added.